--- a/modeling_process/Exploratory_modeling_notebook.ipynb
+++ b/modeling_process/Exploratory_modeling_notebook.ipynb
@@ -302,6 +302,7 @@
    "outputs": [],
    "source": [
     "# create function to calculate the distance between two points using latitude and longitude\n",
+    "# Not used for final model\n",
     "\n",
     "# def distance_to(lat1, lon1, lat2, lon2):\n",
     "#    r = 6371\n",
@@ -474,11 +475,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sort by average sale price ALSO taken from SlimHintz\n",
-    "conditions = [df.date.dt.month.isin([1,2,9,11,12]), df.date.dt.month.isin([4,5,6])]\n",
-    "choices = ['slow', 'busy']\n",
-    "\n",
-    "df['season'] = np.select(conditions, choices, default='normal')"
+    "# group each housing sale into seasons\n",
+    "df['season'] = (df.date.dt.month%12 + 3)//3"
    ]
   },
   {
