--- a/modeling_process/Predict_holdout.ipynb
+++ b/modeling_process/Predict_holdout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,25 +94,14 @@
     "# basement feature\n",
     "holdout['has_basement'] = np.where(holdout['sqft_basement'] == 0, 0, 1)\n",
     "# exponential grade feature\n",
-    "holdout['grade_exp'] = np.exp(holdout['grade'])"
+    "holdout['grade_exp'] = np.exp(holdout['grade'])\n",
+    "# Season feature\n",
+    "holdout['season'] = (holdout['date'].dt.month%12+3)//3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# season feature\n",
-    "conditions = [holdout.date.dt.month.isin([1,2,9,11,12]), holdout.date.dt.month.isin([4,5,6])]\n",
-    "choices = ['slow', 'busy']\n",
-    "\n",
-    "holdout['season'] = np.select(conditions, choices, default='normal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
